syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "Protos/common.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.Comments";

message Comment {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    string treePath = 11;
    string treeOrder = 12;
    int32 containerId = 6;
    string text = 7;
    string textSource = 8;
    int32 authorId = 9;
    int32 parentId = 10;
}

message CommentPageModel {
    repeated Comment pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}