syntax = "proto3";

import "Protos/common.proto";
import "Protos/Comments/commentModel.proto";
import "Protos/Comments/commentFilter.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.Comments";

service CommentService {
    rpc GetComments(GetCommentsRequest) returns (CommentPageModel);
    rpc GetComment(GetCommentRequest) returns (Comment);
    rpc UpdateComment(UpdateCommentRequest) returns (Empty);
    rpc CreateComment(CreateCommentRequest) returns (CreatedEntity);
    rpc DeleteComment(DeleteCommentRequest) returns (Empty);
}

message CreateCommentRequest {
    oneof containerIdOneOf {
        int32 containerId = 6;
    }
    oneof textSourceOneOf {
        string textSource = 8;
    }
    oneof authorIdOneOf {
        int32 authorId = 9;
    }
    oneof parentIdOneOf {
        int32 parentId = 10;
    }
}

message DeleteCommentRequest {
    int32 id = 1;
}

message GetCommentRequest {
    int32 id = 1;
}

message GetCommentsRequest {
    oneof pageIndexOneOf {
        int32 pageIndex = 1;
    }
    oneof pageSizeOneOf {
        int32 pageSize = 2;
    }
    CommentFilter filter = 3;
    string orderBy = 4;
    oneof orderDirectionOneOf {
        OrderDirection orderDirection = 5;
    }
}

message UpdateCommentRequest {
    int32 id = 1;
    oneof textSourceOneOf {
        string textSource = 8;
    }
}
